@@ -1,3 +1,8 @@
+Thu Aug  5 16:57:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (glob_make_pattern): fold continuous PLAINs to get rid of
+	  snail at too deep path.  [ruby-dev:41871]
+
 Thu Aug  5 16:42:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_set_len): should fail to modify shared string.
